# bigocheck

./: .gitignore  CITATION.cff  COOKBOOK.md  README.md  example_report.html  pyproject.toml
.github/workflows/: bigocheck_benchmark.yml  complexity.yml
.venv_video/: pyvenv.cfg
examples/: demo.py
src/bigocheck/: __init__.py  alerts.py  assertions.py  async_bench.py  bounds.py  cli.py  compare.py  core.py  export.py  profiles.py  pytest_plugin.py  recommendations.py  reports.py
tests/: __init__.py  targets.py  test_cli.py  test_core.py  test_jupyter_export_alerts.py  test_stabilization.py
