# Author: gadwant
[project]
name = "bigocheck"
version = "0.1.0"
description = "Empirical complexity regression checker for Python functions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "gadwant" }]
dependencies = []

[project.scripts]
bigocheck = "bigocheck.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
